Site nearly complete.  Need to do a pass for bugs. Need to update metadata on posts and drafts and move images to a more manageable spot.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 ---
 layout: default
 ---
-
 {% for cat in site.categories%}
 <div class="category">
   <div class="title">
-    <a href="{{cat[0] | prepend: site.base-url}}"> {{ cat[0] | capitalize
-      }}</a>
+    <a href="{{cat[0] | prepend:site.base-url}}"> {{ cat[0] }}</a>
   </div>
-
   <ol class="articles">
     {% for post in cat[1] limit:3 %}
     <li class="article">
@@ -18,7 +15,7 @@ layout: default
           <img class="img-responsive" src="{{ post.featured-image }}"/>
           {% else %}
           <img class="img-responsive"
-               src="{{ '/img/default.png' | prepend: site.base-url}}"/>
+               src="{{ '/img/default.png' | prepend:site.base-url}}"/>
           {% endif %}
         </a>
       </div>
@@ -34,8 +31,4 @@ layout: default
     <!-- more articles -->
   </ol> <!-- end: articles -->
 </div> <!-- end: category -->
-
 {% endfor %}
-
-<!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>-->
-
