--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@ layout: default
           {% if post.featured-image %}
           <img class="img-responsive" src="{{ post.featured-image }}"/>
           {% else %}
-          <img class="img-responsive"
-               src="{{ '/img/default.png' | prepend:site.base-url}}"/>
+          <img class="img-responsive" src="{{ '/img/default.png' | prepend:site.base-url}}"/>
           {% endif %}
         </a>
       </div>
       <div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
       <div class="summary"><a href="{{ post.url }}">{%if post.summary %}
-        {{ post.summary | strip_html |strip_newlines |truncatewords:20 |
-        truncate:100 }}
+        {{ post.summary | strip_html |strip_newlines |truncatewords:20 | truncate:100 }}
         {% else %}
         {{ post.excerpt | strip_html | strip_newlines | truncate:90 }}
         {% endif %}</a></div>
